linux-4.14.14-1-wanderer (4.14.14-1.8) xenial; urgency=medium

  * Add watchdog timer support
  * Fix missing RTNL lock in ksz8995 switch driver

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Thu, 08 Nov 2018 15:38:59 +1300

linux-4.14.14-1-wanderer (4.14.14-1.7) xenial; urgency=medium

  * Enable USB network driver modules
  * Make update-boot more tolerant

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Wed, 07 Nov 2018 15:24:51 +1300

linux-4.14.14-1-wanderer (4.14.14-1.6) xenial; urgency=medium

  * DSA driver for KSZ8794 switch
  * Update device tree for more sensible ethernet configuration selection
  * Add net.ifnames=0 to fix #1887 - USB devices get renamed incorrectly

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Wed, 07 Nov 2018 10:37:56 +1300

linux-4.14.14-1-wanderer (4.14.14-1.5) xenial; urgency=medium

  * Fix update-boot for /boot relative to / mount point
  * Fix polarity of mmc2 card detect in wanderer device tree
  * Bump

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Fri, 02 Nov 2018 13:58:51 +1300

linux-4.14.14-1-wanderer (4.14.14-1.4) xenial; urgency=medium

  * Add cpufreq compatibility line for A64
  * Update wanderer2 dts to support u-boot selection of ethernet
    switch KSZ8794 or PHY KSZ8081
  * Support manufacturing info in device tree (populated by u-boot)
  * Add hook and script for auto update of extlinux.conf
  * Fix debian rules to do proper install and link

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Thu, 01 Nov 2018 08:09:33 +1300

linux-4.14.14-1-wanderer (4.14.14-1.3) xenial; urgency=medium

  * Support for SOPINE w25q128 SPI flash as mtd
  * And debug and fix for above

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Fri, 26 Oct 2018 17:56:02 +1300

linux-4.14.14-1-wanderer (4.14.14-1.2) xenial; urgency=medium

  * Debian build via rules file, based on kernel builddeb script
