@@ -2,6 +2,7 @@ linux-4.14.14-1-wanderer (4.14.14-1.8) xenial; urgency=medium
 
   * Add watchdog timer support
   * Fix missing RTNL lock in ksz8995 switch driver
+  * Support EPROBE_DEFER in ksz8995
 
  -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Thu, 08 Nov 2018 15:38:59 +1300
 
